--- a/docs/main.css
+++ b/docs/main.css
@@ -1,9 +1,9 @@
 /* * {
     margin: 10px 40px;
 } */
-* {
+/* * {
     justify-content: center;
-}
+} */
 
 #mapid { 
     height: 300px;
@@ -11,6 +11,3 @@
     
 }
 
-#MapWrapper{
-
-}
