--- a/docs/main.css
+++ b/docs/main.css
@@ -14,3 +14,50 @@
     justify-content: center;
 } */
 
+
+
+.ABurglary{
+	color:Blue;
+}
+.AC9954{
+	 color:Green;
+}
+.AC9959{
+	color:Green;
+}
+.AC1800{
+	color:Green;
+}
+.AC300{
+	color:Blue;
+}
+.AC110{
+	color:Tomato;
+}
+.AC120{
+	color:Tomato;
+}
+/*
+murder
+.AC120{
+}
+rape
+.AC210{
+}
+rape
+.AC300{
+}
+rape
+.AC311{
+}
+robbery
+.AC312{
+}
+robbery
+.AC313{
+}
+robbery
+.AC314{
+}
+*/
+
