Manually copied changes over from dumb branch since merging didnt want to work

--- a/docs/main.css
+++ b/docs/main.css
@@ -16,27 +16,17 @@
 
 
 
-.ABurglary{
-	color:Blue;
+.C500,.C300,.C311,.C314,.C371,.C1401,.C1415,.C374,.C351,.C341,.C373,.C540,.C523,.C530,.C543,.C521,.C515,.C510,.C513,.C520,.C511,.C533,.C551,.C546,.C550,.C555,.C531,.C525,
+.C560{
+	background-color:Blue;
 }
-.AC9954{
-	 color:Green;
+.C9954,.C9959,.C1800,.C1811,.C1813,.C1835,.C1843,.C1812{
+	 background-color:Green;
 }
-.AC9959{
-	color:Green;
+.C110,.C120,.C901,.C971,.C900{
+	background-color:Tomato;
 }
-.AC1800{
-	color:Green;
-}
-.AC300{
-	color:Blue;
-}
-.AC110{
-	color:Tomato;
-}
-.AC120{
-	color:Tomato;
-}
+
 /*
 murder
 .AC120{
