--- a/docs/main.css
+++ b/docs/main.css
@@ -17,14 +17,14 @@
 
 
 .C500,.C300,.C311,.C314,.C371,.C1401,.C1415,.C374,.C351,.C341,.C373,.C540,.C523,.C530,.C543,.C521,.C515,.C510,.C513,.C520,.C511,.C533,.C551,.C546,.C550,.C555,.C531,.C525,.C541,
-.C560{
+.C560,.C535,.C343,.C321,.C553,.C344{
 	background-color:lightBlue;
 }
-.C9954,.C9959,.C1800,.C1811,.C1813,.C1835,.C1843,.C1812{
-	 background-color:Green;
+.C9954,.C9959,.C1800,.C1811,.C1813,.C1835,.C1843,.C1812,.C1814,.C1814,.C1880,.C1820{
+	 background-color:lightGreen;
 }
-.C110,.C120,.C901,.C971,.C900{
-	background-color:Tomato;
+.C110,.C120,.C901,.C971,.C900,.C933,.C903,.C905{
+	background-color:#ff7d66;
 }
 
 /*
