maybe this is good?

--- a/docs/main.css
+++ b/docs/main.css
@@ -17,13 +17,15 @@
 
 
 .C500,.C300,.C311,.C314,.C371,.C1401,.C1415,.C374,.C351,.C341,.C373,.C540,.C523,.C530,.C543,.C521,.C515,.C510,.C513,.C520,.C511,.C533,.C551,.C546,.C550,.C555,.C531,.C525,.C541,
-.C560,.C535,.C343,.C321,.C553,.C344{
+.C560,.C535,.C343,.C321,.C553,.C344,.C700,.C710,.C712,.C1400,.C1410,.C630,.C631,.C614,.C630,.C641,
+.C693,.C691,.C692,.C640,.C651{
 	background-color:lightBlue;
 }
-.C9954,.C9959,.C1800,.C1811,.C1813,.C1835,.C1843,.C1812,.C1814,.C1814,.C1880,.C1820{
+.C9954,.C9959,.C1800,.C1811,.C1813,.C1835,.C1843,.C1812,.C1814,.C1814,.C1880,.C1820,.C2619{
 	 background-color:lightGreen;
 }
-.C110,.C120,.C901,.C971,.C900,.C933,.C903,.C905{
+.C110,.C120,.C901,.C971,.C900,.C933,.C903,.C905,.C400,.C410,.C420,.C430,.C440,.C862,.C861,.C412,
+.C451,.C441,.C422,.C432,.C450,.C421,.C431{
 	background-color:#ff7d66;
 }
 
