--- a/docs/main.css
+++ b/docs/main.css
@@ -14,7 +14,9 @@
     justify-content: center;
 } */
 
-
+ body{
+  background-color: #c9c9c9;
+}
 
 .C500,.C300,.C311,.C314,.C371,.C1401,.C1415,.C374,.C351,.C341,.C373,.C540,.C523,.C530,.C543,.C521,.C515,.C510,.C513,.C520,.C511,.C533,.C551,.C546,.C550,.C555,.C531,.C525,.C541,
 .C560,.C535,.C343,.C321,.C553,.C344,.C700,.C710,.C712,.C1400,.C1410,.C630,.C631,.C614,.C630,.C641,
