Added more width on search box to add more room to see geocoordinates

--- a/docs/main.css
+++ b/docs/main.css
@@ -18,6 +18,11 @@
   background-color: #c9c9c9;
 }
 
+
+#search{
+  width: 350px;
+}
+
 .C500,.C300,.C311,.C314,.C371,.C1401,.C1415,.C374,.C351,.C341,.C373,.C540,.C523,.C530,.C543,.C521,.C515,.C510,.C513,.C520,.C511,.C533,.C551,.C546,.C550,.C555,.C531,.C525,.C541,
 .C560,.C535,.C343,.C321,.C553,.C344,.C700,.C710,.C712,.C1400,.C1410,.C630,.C631,.C614,.C630,.C641,
 .C693,.C691,.C692,.C640,.C651,.C545,.C711,.C720,.C1420,.C1430,.C643,.C600,.C642,.C643,.C652,.C632,.C621,.C633,.C653,.C661,.C652,.C722,.C354,.C662,.C622,.C364,.C1425{
